--- a/modules/commission/locale/fr_FR.po
+++ b/modules/commission/locale/fr_FR.po
@@ -54,10 +54,6 @@ msgctxt "field:broker,id:"
 msgid "ID"
 msgstr " "
 
-msgctxt "field:broker,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:broker,party:"
 msgid "Party"
 msgstr "Acteur"
@@ -146,10 +142,6 @@ msgctxt "field:commission.rule,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:commission.rule,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:commission.rule,offered:"
 msgid "Offered"
 msgstr "Offre"
@@ -226,10 +218,6 @@ msgctxt "field:contract.invoice.commission,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:contract.invoice.commission,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:contract.invoice.commission,rec_name:"
 msgid "Name"
 msgstr "Nom"
@@ -294,10 +282,6 @@ msgctxt "field:contract.option-commission.option,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:contract.option-commission.option,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:contract.option-commission.option,option:"
 msgid "Subscribed Option"
 msgstr "Garantie Souscrite"
@@ -354,13 +338,9 @@ msgctxt "field:contract.premium.commission,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:contract.premium.commission,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:contract.premium.commission,party:"
 msgid "Party"
-msgstr "Tiers"
+msgstr "Acteur"
 
 msgctxt "field:contract.premium.commission,premium:"
 msgid "Premium"
@@ -433,10 +413,6 @@ msgstr "Réseau de Distribution"
 msgctxt "field:distribution.network-broker,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:distribution.network-broker,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
 
 msgctxt "field:distribution.network-broker,rec_name:"
 msgid "Name"
