--- a/modules/contract/locale/fr_FR.po
+++ b/modules/contract/locale/fr_FR.po
@@ -78,17 +78,13 @@ msgctxt "field:contract,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:contract,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:contract,options:"
 msgid "Options"
 msgstr "Garanties"
 
 msgctxt "field:contract,parties:"
 msgid "Parties"
-msgstr "Tiers"
+msgstr "Acteurs"
 
 msgctxt "field:contract,product:"
 msgid "Product"
@@ -162,13 +158,9 @@ msgctxt "field:contract.activation_history,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:contract.activation_history,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:contract.activation_history,rec_name:"
 msgid "Name"
-msgstr "Valeur"
+msgstr "Nom"
 
 msgctxt "field:contract.activation_history,start_date:"
 msgid "Start Date"
@@ -213,10 +205,6 @@ msgstr "Date de fin"
 msgctxt "field:contract.address,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:contract.address,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Déplier l'arbre"
 
 msgctxt "field:contract.address,policy_owner:"
 msgid "Policy Owner"
@@ -266,13 +254,9 @@ msgctxt "field:contract.contact,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:contract.contact,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:contract.contact,party:"
 msgid "Party"
-msgstr "Tiers"
+msgstr "Acteur"
 
 msgctxt "field:contract.contact,rec_name:"
 msgid "Name"
@@ -314,10 +298,6 @@ msgctxt "field:contract.contact.type,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:contract.contact.type,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:contract.contact.type,name:"
 msgid "Name"
 msgstr "Nom"
@@ -345,10 +325,6 @@ msgstr "Date de Fin"
 msgctxt "field:contract.end.select_date,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:contract.end.select_date,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
 
 msgctxt "field:contract.option,appliable_conditions_date:"
 msgid "Appliable Conditions Date"
@@ -410,13 +386,9 @@ msgctxt "field:contract.option,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:contract.option,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:contract.option,parties:"
 msgid "Parties"
-msgstr "Tiers"
+msgstr "Acteurs"
 
 msgctxt "field:contract.option,product:"
 msgid "Product"
@@ -469,10 +441,6 @@ msgstr "Erreur"
 msgctxt "field:contract.service,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:contract.service,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
 
 msgctxt "field:contract.service,option:"
 msgid "Coverage"
@@ -554,7 +522,7 @@ msgstr "Etendre l'arbre"
 msgctxt ""
 "field:contract.wizard.option_subscription.options_displayer.option,name:"
 msgid "Name"
-msgstr "Valeur"
+msgstr "Nom"
 
 msgctxt ""
 "field:contract.wizard.option_subscription.options_displayer.option,option:"
