--- a/modules/contract_insurance/locale/fr_FR.po
+++ b/modules/contract_insurance/locale/fr_FR.po
@@ -165,10 +165,6 @@ msgctxt "field:contract-agreement,kind:"
 msgid "Kind"
 msgstr "Type"
 
-msgctxt "field:contract-agreement,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:contract-agreement,party:"
 msgid "Party"
 msgstr "Acteur"
@@ -220,10 +216,6 @@ msgstr "Date de Fin"
 msgctxt "field:contract.address,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:contract.address,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
 
 msgctxt "field:contract.address,policy_owner:"
 msgid "Policy Owner"
@@ -321,10 +313,6 @@ msgctxt "field:contract.covered_element,multi_mixed_view:"
 msgid "Options"
 msgstr "Données de Couverture"
 
-msgctxt "field:contract.covered_element,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:contract.covered_element,name:"
 msgid "Name"
 msgstr "Nom"
@@ -339,7 +327,7 @@ msgstr "Parent"
 
 msgctxt "field:contract.covered_element,parties:"
 msgid "Parties"
-msgstr "Tiers"
+msgstr "Acteurs"
 
 msgctxt "field:contract.covered_element,party:"
 msgid "Actor"
@@ -421,10 +409,6 @@ msgctxt "field:contract.manage_exclusion.select,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:contract.manage_exclusion.select,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:contract.manage_exclusion.select,options:"
 msgid "Options"
 msgstr "Options"
@@ -436,10 +420,6 @@ msgstr "Exclusion"
 msgctxt "field:contract.manage_exclusion.select.exclusion,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:contract.manage_exclusion.select.exclusion,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
 
 msgctxt "field:contract.manage_exclusion.select.exclusion,selected:"
 msgid "Selected"
@@ -465,10 +445,6 @@ msgctxt "field:contract.manage_extra_premium.select,kind:"
 msgid "Kind"
 msgstr "Type"
 
-msgctxt "field:contract.manage_extra_premium.select,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:contract.manage_extra_premium.select,option:"
 msgid "Option"
 msgstr "Option"
@@ -489,10 +465,6 @@ msgctxt "field:contract.manage_extra_premium.select.extra,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:contract.manage_extra_premium.select.extra,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:contract.manage_extra_premium.select.extra,selected:"
 msgid "Selected"
 msgstr "Coché"
@@ -500,10 +472,6 @@ msgstr "Coché"
 msgctxt "field:contract.manage_extra_premium.select.option,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:contract.manage_extra_premium.select.option,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
 
 msgctxt "field:contract.manage_extra_premium.select.option,option:"
 msgid "Option"
@@ -689,10 +657,6 @@ msgctxt "field:contract.option.extra_premium,motive:"
 msgid "Motive"
 msgstr "Motif"
 
-msgctxt "field:contract.option.extra_premium,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:contract.option.extra_premium,option:"
 msgid "Option"
 msgstr "Option"
@@ -756,10 +720,6 @@ msgctxt "field:contract.renew.parameters,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:contract.renew.parameters,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:contract.renew.parameters,renew_what:"
 msgid "All contracts"
 msgstr "Tous les contrats"
@@ -779,10 +739,6 @@ msgstr "A renouveler"
 msgctxt "field:contract.renew.report,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:contract.renew.report,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
 
 msgctxt "field:contract.renew.report,renewal_log_failure:"
 msgid "Failed"
@@ -808,7 +764,7 @@ msgstr "Cacher le risque couvert"
 
 msgctxt "field:contract.wizard.option_subscription.options_displayer,party:"
 msgid "Party"
-msgstr "Tiers"
+msgstr "Acteur"
 
 msgctxt ""
 "field:contract.wizard.option_subscription.options_displayer,possible_covered_elements:"
@@ -854,10 +810,6 @@ msgstr "ID"
 msgctxt "field:expense,kind:"
 msgid "Kind"
 msgstr "Type"
-
-msgctxt "field:expense,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
 
 msgctxt "field:expense,rec_name:"
 msgid "Name"
