--- a/modules/country_cog/locale/fr_FR.po
+++ b/modules/country_cog/locale/fr_FR.po
@@ -34,10 +34,6 @@ msgctxt "field:country.zipcode,id:"
 msgid "ID"
 msgstr " "
 
-msgctxt "field:country.zipcode,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:country.zipcode,rec_name:"
 msgid "Name"
 msgstr " "
@@ -76,7 +72,7 @@ msgstr "Code Postal"
 
 msgctxt "model:ir.test_case.instance,name:zip_code_test_case"
 msgid "Zip Code Test Case"
-msgstr "Jeux d'essai Code Postaux"
+msgstr "Jeux d'essai : codes postaux"
 
 msgctxt "model:ir.ui.menu,name:menu_zipcode_form"
 msgid "ZipCode"
