--- a/modules/offered_insurance/locale/fr_FR.po
+++ b/modules/offered_insurance/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -157,10 +157,6 @@ msgctxt "field:billing.premium.rule,match_contract_frequency:"
 msgid "Match Contract Frequency"
 msgstr "Synchroniser avec la fréquence du contrat"
 
-msgctxt "field:billing.premium.rule,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:billing.premium.rule,offered:"
 msgid "Offered"
 msgstr "Offre"
@@ -253,10 +249,6 @@ msgctxt "field:billing.premium.rule.component,kind:"
 msgid "Line kind"
 msgstr "Type"
 
-msgctxt "field:billing.premium.rule.component,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:billing.premium.rule.component,premium_rule:"
 msgid "Premium Rule"
 msgstr "Règle de Cotisation"
@@ -321,10 +313,6 @@ msgctxt "field:clause,kind:"
 msgid "Kind"
 msgstr "Type"
 
-msgctxt "field:clause,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:clause,name:"
 msgid "Name"
 msgstr "Nom"
@@ -353,10 +341,6 @@ msgctxt "field:document.create.attach,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:document.create.attach,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:document.create.attach,name:"
 msgid "Filename"
 msgstr "Nom du Fichier"
@@ -381,13 +365,9 @@ msgctxt "field:document.create.preview,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:document.create.preview,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:document.create.preview,party:"
 msgid "Party"
-msgstr "Tiers"
+msgstr "Acteur"
 
 msgctxt "field:document.create.select,good_address:"
 msgid "Mail Address"
@@ -401,10 +381,6 @@ msgctxt "field:document.create.select,models:"
 msgid "Models"
 msgstr "Modèles"
 
-msgctxt "field:document.create.select,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:document.create.select,party:"
 msgid "Party"
 msgstr "Acteur"
@@ -416,10 +392,6 @@ msgstr "Modèle de Lettre"
 msgctxt "field:document.create.select.template,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:document.create.select.template,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
 
 msgctxt "field:document.create.select.template,selected:"
 msgid "Selected"
@@ -448,10 +420,6 @@ msgstr "Date de Fin"
 msgctxt "field:document.description,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:document.description,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
 
 msgctxt "field:document.description,name:"
 msgid "Name"
@@ -485,10 +453,6 @@ msgctxt "field:document.receive.attach,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:document.receive.attach,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:document.receive.attach,resource:"
 msgid "Resource"
 msgstr "Ressource"
@@ -500,10 +464,6 @@ msgstr "ID"
 msgctxt "field:document.receive.request,kind:"
 msgid "Kind"
 msgstr "Type"
-
-msgctxt "field:document.receive.request,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
 
 msgctxt "field:document.receive.request,request:"
 msgid "Request"
@@ -520,10 +480,6 @@ msgstr "Documents"
 msgctxt "field:document.receive.set_requests,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:document.receive.set_requests,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
 
 msgctxt "field:document.request,create_date:"
 msgid "Create Date"
@@ -548,10 +504,6 @@ msgstr "ID"
 msgctxt "field:document.request,is_complete:"
 msgid "Is Complete"
 msgstr "Tout reçu"
-
-msgctxt "field:document.request,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
 
 msgctxt "field:document.request,needed_by:"
 msgid "Requested for"
@@ -612,10 +564,6 @@ msgstr "Nécessaire Pour"
 msgctxt "field:document.request.line,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:document.request.line,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
 
 msgctxt "field:document.request.line,rec_name:"
 msgid "Name"
@@ -684,10 +632,6 @@ msgstr "ID"
 msgctxt "field:document.rule,kind:"
 msgid "Kind"
 msgstr "Type"
-
-msgctxt "field:document.rule,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
 
 msgctxt "field:document.rule,offered:"
 msgid "Offered"
@@ -804,10 +748,6 @@ msgstr "Corps du courrier électronique"
 msgctxt "field:document.template,mail_subject:"
 msgid "eMail Subject"
 msgstr "Sujet du courrier électronique"
-
-msgctxt "field:document.template,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
 
 msgctxt "field:document.template,name:"
 msgid "Name"
@@ -989,10 +929,6 @@ msgctxt "field:expense.kind,kind:"
 msgid "Kind"
 msgstr "Type"
 
-msgctxt "field:expense.kind,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:expense.kind,name:"
 msgid "Name"
 msgstr "Nom"
@@ -1153,10 +1089,6 @@ msgctxt "field:extra_premium.kind,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:extra_premium.kind,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:extra_premium.kind,name:"
 msgid "Name"
 msgstr "Nom"
@@ -1192,10 +1124,6 @@ msgstr "Créé par"
 msgctxt "field:insurer,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:insurer,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
 
 msgctxt "field:insurer,party:"
 msgid "Insurer"
@@ -1297,10 +1225,6 @@ msgctxt "field:offered.business_rule_root,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:offered.business_rule_root,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:offered.business_rule_root,offered:"
 msgid "Offered"
 msgstr "Offre"
@@ -1372,10 +1296,6 @@ msgstr "ID"
 msgctxt "field:offered.coverage_amount.rule,kind:"
 msgid "Kind"
 msgstr "Type"
-
-msgctxt "field:offered.coverage_amount.rule,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
 
 msgctxt "field:offered.coverage_amount.rule,offered:"
 msgid "Offered"
@@ -1469,10 +1389,6 @@ msgctxt "field:offered.deductible.rule,kind:"
 msgid "Kind"
 msgstr "Type"
 
-msgctxt "field:offered.deductible.rule,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:offered.deductible.rule,offered:"
 msgid "Offered"
 msgstr "Offre"
@@ -1553,10 +1469,6 @@ msgctxt "field:offered.deductible.rule.duration,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:offered.deductible.rule.duration,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:offered.deductible.rule.duration,rec_name:"
 msgid "Name"
 msgstr "Nom"
@@ -1596,10 +1508,6 @@ msgstr "Date de Fin"
 msgctxt "field:offered.eligibility.rule,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:offered.eligibility.rule,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
 
 msgctxt "field:offered.eligibility.rule,offered:"
 msgid "Offered"
@@ -1685,10 +1593,6 @@ msgctxt "field:offered.exclusion,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:offered.exclusion,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:offered.exclusion,name:"
 msgid "Name"
 msgstr "Nom"
@@ -1744,10 +1648,6 @@ msgstr "ID"
 msgctxt "field:offered.item.description,kind:"
 msgid "Kind"
 msgstr "Type"
-
-msgctxt "field:offered.item.description,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
 
 msgctxt "field:offered.item.description,name:"
 msgid "Name"
@@ -2245,10 +2145,6 @@ msgctxt "field:offered.term.rule,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:offered.term.rule,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:offered.term.rule,offered:"
 msgid "Offered"
 msgstr "Offre"
@@ -2387,7 +2283,7 @@ msgstr "Règle parent"
 
 msgctxt "field:rule_engine-extra_data,rec_name:"
 msgid "Name"
-msgstr "Valeur"
+msgstr "Nom"
 
 msgctxt "field:rule_engine-extra_data,write_date:"
 msgid "Write Date"
@@ -2559,11 +2455,11 @@ msgstr "Réception de Document"
 
 msgctxt "model:ir.test_case.instance,name:extra_premium_kind_test_case"
 msgid "Extra Premium Kind Test Case"
-msgstr "Jeux d'essai Type de surprime"
+msgstr "Jeux d'essai : types de surprime"
 
 msgctxt "model:ir.test_case.instance,name:insurer_test_case"
 msgid "Insurer Test Case"
-msgstr "Jeux d'essai Assureur"
+msgstr "Jeux d'essai : assureurs"
 
 msgctxt "model:ir.ui.menu,name:"
 msgid "Clauses"
