--- a/modules/table/locale/fr_FR.po
+++ b/modules/table/locale/fr_FR.po
@@ -114,10 +114,6 @@ msgctxt "field:table,kind:"
 msgid "Kind"
 msgstr "Type"
 
-msgctxt "field:table,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:table,name:"
 msgid "Name"
 msgstr "Nom"
@@ -166,10 +162,6 @@ msgctxt "field:table.2d,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:table.2d,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:table.2d,rec_name:"
 msgid "Name"
 msgstr "Nom"
@@ -214,10 +206,6 @@ msgctxt "field:table.2d.open.ask_dimensions,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:table.2d.open.ask_dimensions,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:table.cell,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
@@ -253,10 +241,6 @@ msgstr "Dimension 4"
 msgctxt "field:table.cell,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:table.cell,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
 
 msgctxt "field:table.cell,rec_name:"
 msgid "Name"
@@ -318,10 +302,6 @@ msgctxt "field:table.dimension.value,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:table.dimension.value,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:table.dimension.value,name:"
 msgid "Name"
 msgstr "Nom"
@@ -365,10 +345,6 @@ msgstr "Identifiant XML"
 msgctxt "field:table.dimension.value.open.ask_type,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:table.dimension.value.open.ask_type,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
 
 msgctxt "field:table.dimension.value.open.ask_type,table:"
 msgid "Table"
@@ -428,7 +404,7 @@ msgstr "Tables"
 
 msgctxt "model:ir.test_case.instance,name:table_test_case"
 msgid "Table Test Case"
-msgstr "Jeux d'essai Table"
+msgstr "Jeux d'essai : table"
 
 msgctxt "model:ir.ui.menu,name:"
 msgid "Create Table"
