--- a/modules/collection/locale/fr_FR.po
+++ b/modules/collection/locale/fr_FR.po
@@ -71,13 +71,9 @@ msgctxt "field:collection,kind:"
 msgid "Kind"
 msgstr "Type"
 
-msgctxt "field:collection,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:collection,party:"
 msgid "Party"
-msgstr "Tiers"
+msgstr "Acteur"
 
 msgctxt "field:collection,rec_name:"
 msgid "Name"
@@ -111,13 +107,9 @@ msgctxt "field:collection.create.assign,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:collection.create.assign,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:collection.create.assign,party:"
 msgid "Party"
-msgstr "Tiers"
+msgstr "Acteur"
 
 msgctxt "field:collection.create.assign,remaining:"
 msgid "Remaining"
@@ -134,10 +126,6 @@ msgstr "ID"
 msgctxt "field:collection.create.assign.lines,kind:"
 msgid "Kind"
 msgstr "Type"
-
-msgctxt "field:collection.create.assign.lines,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
 
 msgctxt "field:collection.create.assign.lines,source_move_line:"
 msgid "Source Move Line"
@@ -171,13 +159,9 @@ msgctxt "field:collection.create.parameters,kind:"
 msgid "Kind"
 msgstr "Type"
 
-msgctxt "field:collection.create.parameters,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:collection.create.parameters,party:"
 msgid "Party"
-msgstr "Tiers"
+msgstr "Acteur"
 
 msgctxt "field:party.party,suspense_account:"
 msgid "Suspense Account"
