--- a/modules/contract_cash_value/locale/fr_FR.po
+++ b/modules/contract_cash_value/locale/fr_FR.po
@@ -50,13 +50,9 @@ msgctxt "field:contract.cash_value.collection,last_update:"
 msgid "Last update"
 msgstr "Dernière actualisation"
 
-msgctxt "field:contract.cash_value.collection,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:contract.cash_value.collection,rec_name:"
 msgid "Name"
-msgstr "Valeur"
+msgstr "Nom"
 
 msgctxt "field:contract.cash_value.collection,reception_date:"
 msgid "Reception Date"
@@ -85,10 +81,6 @@ msgstr "Contrat"
 msgctxt "field:contract.wizard.cash_surrender.parameters,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:contract.wizard.cash_surrender.parameters,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
 
 msgctxt "field:contract.wizard.cash_surrender.parameters,surrender_amount:"
 msgid "Surrender Amount"
@@ -137,7 +129,7 @@ msgstr "Action"
 
 msgctxt "model:ir.test_case.instance,name:journal_test_case"
 msgid "Journal Test Case"
-msgstr "Jeux d'essai Journaux"
+msgstr "Jeux d'essai : journaux"
 
 msgctxt "selection:contract.cash_value.collection,kind:"
 msgid "Payment"
