--- a/modules/contract_insurance_invoice/locale/fr_FR.po
+++ b/modules/contract_insurance_invoice/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -177,10 +177,6 @@ msgstr "Jour de prélèvement"
 msgctxt "field:contract.billing_information,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:contract.billing_information,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
 
 msgctxt "field:contract.billing_information,payment_term:"
 msgid "Payment Term"
@@ -390,10 +386,6 @@ msgctxt "field:contract.premium.display.premiums,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:contract.premium.display.premiums,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:contract.premium.display.premiums,premiums:"
 msgid "Premiums"
 msgstr "Primes"
@@ -410,13 +402,9 @@ msgctxt "field:contract.premium.display.premiums.line,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:contract.premium.display.premiums.line,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:contract.premium.display.premiums.line,name:"
 msgid "Name"
-msgstr "Valeur"
+msgstr "Nom"
 
 msgctxt "field:contract.premium.display.premiums.line,premium:"
 msgid "Premium"
@@ -429,7 +417,7 @@ msgstr "Prime"
 msgctxt ""
 "field:offered.billing.mode-account.invoice.payment_term,billing_mode:"
 msgid "Billing Mode"
-msgstr "Mode de quirttancement"
+msgstr "Mode de quittancement"
 
 msgctxt "field:offered.billing.mode-account.invoice.payment_term,create_date:"
 msgid "Create Date"
@@ -460,7 +448,7 @@ msgstr "Ordre"
 msgctxt ""
 "field:offered.billing.mode-account.invoice.payment_term,payment_term:"
 msgid "Payment Term"
-msgstr "Règle de paiement"
+msgstr "Conditions de paiement"
 
 msgctxt "field:offered.billing.mode-account.invoice.payment_term,rec_name:"
 msgid "Name"
@@ -518,17 +506,13 @@ msgctxt "field:offered.billing_mode,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:offered.billing_mode,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
-
 msgctxt "field:offered.billing_mode,name:"
 msgid "Name"
 msgstr "Nom"
 
 msgctxt "field:offered.billing_mode,ordered_payment_terms:"
 msgid "Ordered Payment Terms"
-msgstr "Ordonné les conditions de paiements"
+msgstr "Modifier l'ordre des conditions de paiements"
 
 msgctxt "field:offered.billing_mode,products:"
 msgid "Products"
@@ -576,7 +560,7 @@ msgstr "Modifier l'Ordre"
 
 msgctxt "field:offered.product,ordered_billing_modes:"
 msgid "Ordered Billing Mode"
-msgstr "Ordonné les modes de quittancement"
+msgstr "Modifier l'ordre des modes de quittancement"
 
 msgctxt "field:offered.product-offered.billing_mode,billing_mode:"
 msgid "Billing Mode"
@@ -597,10 +581,6 @@ msgstr "Créé par"
 msgctxt "field:offered.product-offered.billing_mode,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:offered.product-offered.billing_mode,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
 
 msgctxt "field:offered.product-offered.billing_mode,order:"
 msgid "Order"
@@ -648,7 +628,7 @@ msgstr "Quittances"
 
 msgctxt "field:party.synthesis.menu.invoice,party:"
 msgid "Party"
-msgstr "Tiers"
+msgstr "Acteur"
 
 msgctxt "field:party.synthesis.menu.invoice,rec_name:"
 msgid "Name"
@@ -668,11 +648,11 @@ msgstr "Identifiant XML"
 
 msgctxt "help:offered.billing_mode,allowed_direct_debit_days:"
 msgid ""
-"A list of comma-separated numbers that resolves to the list of allowed days of the month eligible for direct debit.\n"
+"Days of the month allowed for direct debit payment separated by comma.\n"
 "\n"
 "An empty list means that all dates are allowed"
 msgstr ""
-"Une liste de nombres séparés par des virgules correspondant aux jours disponible pour le prélèvement.\n"
+"Une liste de nombres séparés par des virgules correspondant aux jours disponibles pour le prélèvement.\n"
 "Une liste vide signifie que tous les jours sont autorisés."
 
 msgctxt "model:account.payment.creation,name:"
