--- a/modules/rule_engine/locale/fr_FR.po
+++ b/modules/rule_engine/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -26,6 +26,10 @@ msgctxt "error:rule_engine.test_case.init:"
 msgid "This wizard should be run froma rule engine execution log selected"
 msgstr ""
 "L'assistant doit être lancé depuis une trace d'exécution du moteur de règle"
+
+msgctxt "error:rule_engine.validate:"
+msgid "No Batch Path Specified"
+msgstr "Le chemin d'exécution des batchs n'est pas configuré"
 
 msgctxt "error:rule_engine:"
 msgid ""
@@ -83,10 +87,6 @@ msgstr "ID"
 msgctxt "field:functional_error,kind:"
 msgid "Kind"
 msgstr "Portée de la donnée"
-
-msgctxt "field:functional_error,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
 
 msgctxt "field:functional_error,name:"
 msgid "Name"
@@ -152,10 +152,6 @@ msgctxt "field:rule_engine,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:rule_engine,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:rule_engine,name:"
 msgid "Name"
 msgstr "Nom"
@@ -163,6 +159,10 @@ msgstr "Nom"
 msgctxt "field:rule_engine,parameters:"
 msgid "Parameters"
 msgstr "Paramètres"
+
+msgctxt "field:rule_engine,passing_test_cases:"
+msgid "Test Cases OK"
+msgstr ""
 
 msgctxt "field:rule_engine,rec_name:"
 msgid "Name"
@@ -348,10 +348,6 @@ msgctxt "field:rule_engine.context,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:rule_engine.context,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:rule_engine.context,name:"
 msgid "Name"
 msgstr "Nom"
@@ -452,10 +448,6 @@ msgctxt "field:rule_engine.function,long_description:"
 msgid "Long Description"
 msgstr "Description"
 
-msgctxt "field:rule_engine.function,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:rule_engine.function,name:"
 msgid "Name"
 msgstr "Nom"
@@ -532,10 +524,6 @@ msgctxt "field:rule_engine.log,low_level_debug:"
 msgid "Execution Trace"
 msgstr "Trace d'exécution"
 
-msgctxt "field:rule_engine.log,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:rule_engine.log,rec_name:"
 msgid "Name"
 msgstr "Nom"
@@ -588,10 +576,6 @@ msgctxt "field:rule_engine.rule_parameter,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:rule_engine.rule_parameter,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Développer l'arbre"
-
 msgctxt "field:rule_engine.rule_parameter,name:"
 msgid "Code"
 msgstr "Code"
@@ -640,10 +624,6 @@ msgctxt "field:rule_engine.run_tests.results,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:rule_engine.run_tests.results,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:rule_engine.run_tests.results,report:"
 msgid "Report"
 msgstr "Rapport"
@@ -651,10 +631,6 @@ msgstr "Rapport"
 msgctxt "field:rule_engine.runtime,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:rule_engine.runtime,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
 
 msgctxt "field:rule_engine.test_case,create_date:"
 msgid "Create Date"
@@ -684,13 +660,13 @@ msgctxt "field:rule_engine.test_case,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:rule_engine.test_case,last_passing_date:"
+msgid "Last passing run date"
+msgstr ""
+
 msgctxt "field:rule_engine.test_case,low_debug:"
 msgid "Low Level Debug Info"
 msgstr "Niveau bas de debug"
-
-msgctxt "field:rule_engine.test_case,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
 
 msgctxt "field:rule_engine.test_case,rec_name:"
 msgid "Name"
@@ -752,10 +728,6 @@ msgctxt "field:rule_engine.test_case.value,id:"
 msgid "ID"
 msgstr "ID"
 
-msgctxt "field:rule_engine.test_case.value,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Etendre Arbre"
-
 msgctxt "field:rule_engine.test_case.value,name:"
 msgid "Name"
 msgstr "Nom"
@@ -774,7 +746,7 @@ msgstr "Règle"
 
 msgctxt "field:rule_engine.test_case.value,test_case:"
 msgid "Test Case"
-msgstr "Jeu de Test"
+msgstr "Jeu d'essai"
 
 msgctxt "field:rule_engine.test_case.value,value:"
 msgid "Value"
@@ -791,6 +763,10 @@ msgstr "Mis à jour par"
 msgctxt "field:rule_engine.test_case.value,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
+
+msgctxt "field:rule_engine.validate,id:"
+msgid "ID"
+msgstr "ID"
 
 msgctxt "field:tag,childs:"
 msgid "Childs"
@@ -815,10 +791,6 @@ msgstr "Créé par"
 msgctxt "field:tag,id:"
 msgid "ID"
 msgstr "ID"
-
-msgctxt "field:tag,must_expand_tree:"
-msgid "Must Expand Tree"
-msgstr "Must Expand Tree"
 
 msgctxt "field:tag,name:"
 msgid "Name"
@@ -854,7 +826,7 @@ msgstr "Un couple de clé, valeur séparaé par un \":\" par ligne"
 
 msgctxt "help:rule_engine.rule_parameter,selection_sorted:"
 msgid "If the selection must be sorted on label"
-msgstr "Si la sélection doit être ordonné selon le nom du champ"
+msgstr "Si la sélection doit être triée par le libéllé"
 
 msgctxt "model:functional_error,name:"
 msgid "Rule Error"
@@ -867,6 +839,10 @@ msgstr "Labels"
 msgctxt "model:ir.action,name:act_test_case_init"
 msgid "Create Test Case"
 msgstr "Créer les jeux d'essai"
+
+msgctxt "model:ir.action,name:act_validate_test_cases"
+msgid "Validate Rules"
+msgstr "Règles de validation"
 
 msgctxt "model:ir.action,name:context_window"
 msgid "Contexts"
@@ -962,11 +938,15 @@ msgstr "Outils"
 
 msgctxt "model:rule_engine.test_case,name:"
 msgid "Test Case"
-msgstr "Jeu de Test"
+msgstr "Jeu d'essai"
 
 msgctxt "model:rule_engine.test_case.value,name:"
 msgid "Test Case Value"
 msgstr "Valeur du Test"
+
+msgctxt "model:rule_engine.validate,name:"
+msgid "Rule Engine Test Case Validation Batch"
+msgstr "Batch de validation des jeux d'essai des règles"
 
 msgctxt "model:tag,name:"
 msgid "Tag"
@@ -1106,7 +1086,7 @@ msgstr "Résultat"
 
 msgctxt "view:rule_engine.test_case:"
 msgid "Test Case"
-msgstr "Jeu de Test"
+msgstr "Jeu d'essai"
 
 msgctxt "view:rule_engine:"
 msgid "Rule"
